syntax = "proto3";

package test.integration.lb;

message AsyncRoundRobin {
}
